--- a/index.html
+++ b/index.html
@@ -33,8 +33,17 @@
         </div>
       </div>
     </header>
-    <section>
-    
+
+    <section class="hero">
+      <div class="hero-center">
+        <h1>We are creatives</h1>
+
+        <div class="hero-flecha">
+          <a href="#">
+            <img src="./images/icon-arrow-down.svg" alt="">
+          </a>
+        </div>
+      </div>
     </section>
   </main>
 </body>
