--- a/index.html
+++ b/index.html
@@ -9,42 +9,40 @@
 </head>
 <body>
   <header>
-    <div class="header-container">
-      <div>
-        <div>
-          <a href="#">
-            <img src="./images/logo.svg" alt="logo">
-          </a>
-        </div>
-      </div>
-      
-      <div class="header-menu">
-        <div>
-          <ul class="header-ul">
-            <li>About</li>
-            <li> Services</li>
-            <li> Projects</li>
-          </ul>
-        </div>
-        <div>
-          <button class="button">Contact</button>
-        </div>
+    <div class="toolbar">
+      <img src="images/logo.svg" class="logo" alt="sunnyside logo" />
+
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact" class="contact">Contact</a></li>
+        </ul>
+      </nav>
+
+      <button class="hamburger">
+        <img src="images/icon-hamburger.svg" class="img-mobile" alt="hamburger icon" />
+      </button>
+    </div>
+
+    <div class="header-content">
+      <!-- <img src="images/desktop/image-header.jpg" alt="half orange fruit" class="img-desktop"/>
+      <img src="images/mobile/image-header.jpg" alt="half orange fruit" class="img-mobile" /> -->
+
+      <div class="content">
+        <h1>We are creatives</h1>
+        <img src="images/icon-arrow-down.svg" alt="arrow down icon" />
       </div>
     </div>
   </header>
-  
-  <section class="hero">
-    <div class="hero-center">
-      <div>
-        <h1>We are creatives</h1>
-      </div>
 
-      <div class="hero-flecha">
-        <a href="#">
-           <img src="./images/icon-arrow-down.svg" alt="">
-        </a>
-      </div>
-    </div>
-  </section>
+  <main>
+    <section class="page-card">
+      <div></div>
+      <div></div>
+    </section>
+  </main>
+  
 </body>
 </html>
