--- a/index.html
+++ b/index.html
@@ -38,9 +38,35 @@
   </header>
 
   <main>
-    <section class="page-card">
-      <div></div>
-      <div></div>
+    <section id="about">
+      <div class="about-row">
+        <div class="about-text">
+          <h2>Transform your brand</h2>
+          <p> We are a full-service creative agency specializing in helping brands grow fast. 
+            Engage your clients through compelling visuals that do most of the marketing for you.</p>
+            <a class="yellow">Yellow</a>
+        </div>
+
+        <img class="about-img" src="./images/desktop/image-transform.jpg" alt="egg">
+      </div>
+
+      <div class="about-row">
+        <img class="about-img" src="./images/desktop/image-stand-out.jpg" alt="pink cup"/>
+
+        <div class="about-text">
+          <h2>Stand out to the right audience</h2>
+          <p>
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we’ll build and
+            extend your brand in digital places.
+          </p>
+          <a class="red">Learn more</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="services">
+      
     </section>
   </main>
   
