--- a/index.html
+++ b/index.html
@@ -66,7 +66,25 @@
     </section>
 
     <section id="services">
-      
+      <div class="service">
+        <img src="./images/desktop/image-graphic-design.jpg" class="img-desktop" alt="cherry"/>
+
+        <div class="service-text graphic-design">
+          <h2>Graphic design</h2>
+          <p> Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.</p>
+        </div>
+      </div>
+      <div class="service">
+        <img src="./images/desktop/image-photography.jpg" class="img-desktop" alt="orange fruit"/>
+
+        <div class="service-text photography">
+          <h2>Photography</h2>
+          <p> Increase your credibility by getting the most stunning,
+            high-quality photos that improve your business image.</p>
+        </div>
+      </div>
     </section>
   </main>
   
